--- a/test.html
+++ b/test.html
@@ -518,6 +518,6 @@ header, .context-menu, .megamenu-content, footer{
 </style>
 </head>
 <body class='typora-export os-windows' >
-<div  id='write'  class = 'is-node'><p><img align="left" src="test.png" alt="image-20200902194159284" style="zoom:80%;" /></p></div>
+<div  id='write'  class = 'is-node'><h1><a name="测试" class="md-header-anchor"></a><span>测试</span></h1><h2><a name="牛逼" class="md-header-anchor"></a><span>牛逼</span></h2><figure><table><thead><tr><th><span>你好</span></th><th><span>牛牛奶</span></th><th><span>试试</span></th></tr></thead><tbody><tr><td><span>三年</span></td><td><span>是😂</span></td><td>&nbsp;</td></tr><tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr></tbody></table></figure><p><img align="left" src="test.png" alt="image-20200902194159284" style="zoom:80%;" /></p></div>
 </body>
 </html>
